# agentic_terminal

./: .gitignore  Cargo.toml  README.md  package-lock.json
src/: main.rs
src/agent/: agent.rs  mod.rs  runner.rs  spawner.rs  specialists.rs
src/cli/: commands.rs  detect.rs  mod.rs
src/context/: budget.rs  mod.rs  shared.rs
src/display/: diff.rs  markdown.rs  mod.rs  printer.rs
src/llm/: client.rs  mod.rs  types.rs
src/memory/: manager.rs  mod.rs  store.rs  summarizer.rs
src/safety/: guardrails.rs  mod.rs
src/session/: memory.rs  mod.rs  sqlite.rs  trait_def.rs
src/tools/: filesystem.rs  mod.rs  process.rs  shell.rs  spawn.rs  trait_def.rs
